@@ -130,6 +130,8 @@ AC_ARG_ENABLE(dbc,
         AC_MSG_ERROR([Invalid parameter value for --disable-dbc: $enableval])
       ;;
     esac
+ ],[
+    AC_MSG_RESULT(yes)
  ]
 )
 if test x$enable_dbc_d = xyes; then
