@@ -462,7 +462,8 @@ void ECA_CHAINSETUP::switch_to_direct_mode_helper(vector<AUDIO_IO*>* objs,
   for(size_t n = 0; n < objs->size(); n++) {
     AUDIO_IO_BUFFERED_PROXY* pobj = dynamic_cast<AUDIO_IO_BUFFERED_PROXY*>((*objs)[n]);
     if (pobj != 0) {
-      aobj_garbage_rep.push_back((*objs)[n]);
+      //  aobj_garbage_rep.push_back((*objs)[n]);
+      delete (*objs)[n];
       (*objs)[n] = directobjs[n];
       --proxy_clients_rep;
     }
@@ -945,7 +946,8 @@ void ECA_CHAINSETUP::remove_audio_object_helper(AUDIO_IO* aio) {
   AUDIO_IO_BUFFERED_PROXY* p = dynamic_cast<AUDIO_IO_BUFFERED_PROXY*>(aio);
   if (p != 0) {
     /* a proxied object */
-    aobj_garbage_rep.push_back(aio);
+    //  aobj_garbage_rep.push_back(aio);
+    delete aio;
     --proxy_clients_rep;
   }
 }
